<?xml version="1.0" encoding="utf-8"?>

<!-- activity is changed to when the submit button is clicked on -->
<!-- allows app to be scrollable -->
<!--
Ronak Desai
Final Project
Submitted 6/8/2021
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/blue"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisplayAccounts">
        <!-- to display all the information of all forms submitted -->
        <TextView
            android:fontFamily="@string/sansserif"
            android:textColor="@color/white"
            android:id="@+id/txtDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/blank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <!-- to thank the user for the submission -->
        <TextView
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_your_submission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>